creada entidad coche, incidencias, parámetro coche vendido y su dueño.

--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -193,3 +193,8 @@ ui bootstrap tweaks
 }
 
 /* jhipster-needle-scss-add-main JHipster will add new css style */
+.forngclass {
+  background-color: green;
+  color: red;
+  font-weight: bold;
+}
